# OpenGLPlayground

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  OpenGLPlayground.sln  README.md  TODO.md
OpenGLPlayground/: OpenGLPlayground.vcxproj  OpenGLPlayground.vcxproj.filters
OpenGLPlayground/include/: Camera.h  PrimitiveGenerator.h  ShaderUtilities.h
OpenGLPlayground/shaders/: bouncing_particles.comp  particle.comp  particle.cs  particle_attraction.comp  solid.frag  solid.fs  solid.vert  solid.vs
OpenGLPlayground/src/: Camera.cpp  OpenGLPlayground.cpp  ShaderUtilities.cpp
apps/Sandbox/: CMakeLists.txt  Sandbox.cpp
ci/: build_docs.sh  codecov.sh  commit_changes.sh  deploy_docs.sh  generate_todo_list.sh
cmake/: CPack-config.cmake  CodeCov-config.cmake  FindGLFW3.cmake  FindGLM.cmake  Install-config.cmake
docs/: _camera_8h.html  _camera_8h_source.html  _mesh_8h.html  _mesh_8h_source.html  _model_8h.html  _model_8h_source.html  _open_g_l_manager_8h.html  _open_g_l_manager_8h_source.html  _open_g_l_playground_8cpp.html  _particle_system_8h.html  _particle_system_8h_source.html  _primitive_generator_8h.html  _primitive_generator_8h_source.html  _sandbox_8cpp.html  _scene_graph_8h.html  _scene_graph_8h_source.html  _scene_node_8h.html  _scene_node_8h_source.html  _shader_8h.html  _shader_8h_source.html  _shader_utilities_8h.html  _shader_utilities_8h_source.html  _window_8h.html  _window_8h_source.html  annotated.html  bouncing__particles_8comp.html  class_camera-members.html  class_camera.html  class_mesh-members.html  class_mesh.html  class_model-members.html  class_model.html  class_open_g_l_manager-members.html  class_open_g_l_manager.html  class_particle_system-members.html  class_particle_system.html  class_scene_graph-members.html  class_scene_graph.html  class_scene_node-members.html  class_scene_node.html  (+48 more)
docs/html/: _open_g_l_playground_8cpp.html  class_camera-members.html  classes.html  dir_070a56164883fd6ee4154f2a59837e25.html  dir_49a9c4f49fc613f6eaface2077d5cb69.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95c752037a97b41030102703686a0a90.html  dir_f11b8958b9a5a8dd07312898797844b8.html  functions.html  functions_func.html  globals_vars.html  group___l_s_shader_utilities.html  index.html  namespace_l_s_primitive_generator.html  namespaces.html  pages.html  particle_8comp.html  particle__attraction_8comp.html  struct_plane-members.html  struct_plane.html
docs/html/search/: all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_2.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: _camera_8h.tex  _open_g_l_playground_8cpp.tex  _primitive_generator_8h.tex  _shader_utilities_8h.tex  annotated.tex  bouncing__particles_8comp.tex  class_camera.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_95c752037a97b41030102703686a0a90.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group___l_s_shader_utilities.tex  index.tex  md__r_e_a_d_m_e.tex  modules.tex  namespace_l_s_primitive_generator.tex  namespace_l_s_shader_utilities.tex  namespaces.tex  particle_8comp.tex  particle__attraction_8comp.tex  refman.tex  struct_particle.tex  struct_plane.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  groups_0.js  namespaces_0.js  pages_0.js  pages_2.js  (+8 more)
include/: Camera.h  Mesh.h  Model.h  OpenGLManager.h  ParticleSystem.h  PrimitiveGenerator.h  SceneGraph.h  SceneNode.h  Shader.h  ShaderUtilities.h  Window.h
shaders/: bouncing_particles.comp  colored.vert  particle.comp  particle_attraction.comp  point_to_circle.geom  solid.vert
src/: Camera.cpp  Mesh.cpp  Model.cpp  OpenGLManager.cpp  OpenGLPlayground.cpp  PrimitiveGenerator.cpp  SceneNode.cpp  Shader.cpp  ShaderUtilities.cpp  Window.cpp
src/beta/: README.md  compute_shader.cpp
tests/: CMakeLists.txt  EmptyTest.cpp
tests/CameraTest/: CMakeLists.txt  CameraTest.cpp
tests/MeshTest/: CMakeLists.txt  MeshTest.cpp
tests/OpenGLManagerTest/: CMakeLists.txt  OpenGLManagerTest.cpp
tests/WindowTest/: CMakeLists.txt  WindowTest.cpp
